SET(FOLDER_NAME _basic)

IF (BUILD_UNITTEST)

SET(BASEDEF_SRCS
defines.hh
basedef_unittest.cpp
)

SET(BASEMEM_SRCS
allocate.hh
memops.hh
basemem_unittest.cpp
)

FOREACH(TEST_NAME
    basedef
    basemem
  )
  SET(UNITTEST_NAME ${TEST_NAME}_unittest)
  STRING(TOUPPER "${TEST_NAME}_SRCS" SOURCE_NAME)
  ADD_EXECUTABLE(${UNITTEST_NAME} ${${SOURCE_NAME}})
  TARGET_LINK_LIBRARIES(${UNITTEST_NAME} ${UNITTEST_LIBS})
  SET_TARGET_PROPERTIES(${UNITTEST_NAME} PROPERTIES FOLDER "Test")
  ADD_TEST(NAME ${TEST_NAME} WORKING_DIRECTORY ${PROJECT_BINARY_DIR} COMMAND ${UNITTEST_NAME})
ENDFOREACH()

ENDIF (BUILD_UNITTEST)
