SET(FOLDER_NAME struct)

IF (BUILD_STANDALONE)
  SET(LIBRARY_NAME "${FOLDER_NAME}")
ELSE (BUILD_STANDALONE)
  SET(LIBRARY_NAME "prot")
ENDIF (BUILD_STANDALONE)

# IF (BUILD_STANDALONE)
  # STRING(TOUPPER "${FOLDER_NAME}_SRCS" SOURCE_NAME)
  # SET(${SOURCE_NAME}
  # buffer.hh
  # string.hh
  # string.cc
  # )
  # ADD_LIBRARY(${LIBRARY_NAME} STATIC ${${SOURCE_NAME}})
  # # TARGET_LINK_LIBRARIES(${LIBRARY_NAME} )
  # SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES FOLDER "Prot")
# ENDIF (BUILD_STANDALONE)

IF (BUILD_UNITTEST)

SET(BUFFER_SRCS
buffer.hh
buffer_unittest.cpp
)

SET(STRING_SRCS
string.hh
string_unittest.cpp
)

FOREACH(TEST_NAME
    "buffer"
    "string"
  )
  SET(UNITTEST_NAME ${TEST_NAME}_unittest)
  STRING(TOUPPER "${TEST_NAME}_SRCS" TEST_SOURCE)
  ADD_EXECUTABLE(${UNITTEST_NAME} ${${TEST_SOURCE}})
  TARGET_LINK_LIBRARIES(${UNITTEST_NAME} ${UNITTEST_LIBS})
  SET_TARGET_PROPERTIES(${UNITTEST_NAME} PROPERTIES FOLDER "Test")
  ADD_TEST(NAME ${TEST_NAME} WORKING_DIRECTORY ${PROJECT_BINARY_DIR} COMMAND ${UNITTEST_NAME})
ENDFOREACH()

ENDIF(BUILD_UNITTEST)
