SET(FOLDER_NAME system)

IF (BUILD_STANDALONE)
  SET(LIBRARY_NAME "${FOLDER_NAME}")
ELSE (BUILD_STANDALONE)
  SET(LIBRARY_NAME "prot")
ENDIF (BUILD_STANDALONE)

IF (BUILD_STANDALONE)
  STRING(TOUPPER "${FOLDER_NAME}_SRCS" SOURCE_NAME)
  SET(${SOURCE_NAME}
  sysinfo.hh
  sysinfo.cc
  console.hh
  console.cc
  thread.hh
  thread.cc
  pthread.hh
  pthread.cc
  )
  IF (NOT WIN32)
    SET(${SOURCE_NAME}_LIBS
      pthread
    )
  ENDIF ()
  ADD_LIBRARY(${LIBRARY_NAME} STATIC ${${SOURCE_NAME}})
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${${SOURCE_NAME}_LIBS})
  SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES FOLDER "Prot")
ENDIF (BUILD_STANDALONE)

ADD_SUBDIRECTORY(synchronization)
ADD_SUBDIRECTORY(time)

IF (BUILD_UNITTEST)
  IF (BUILD_STANDALONE)
    SET(TEST_EXT_LIBS
      time
      synchronization
    )
  ENDIF (BUILD_STANDALONE)
  FILE(GLOB UNITTEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*_unittest.cpp")
  FOREACH(utestfilev ${UNITTEST_FILES})
    STRING(REGEX REPLACE ".*\\/([^/]+)_unittest.cpp" "\\1" testname ${utestfilev})
    STRING(TOUPPER "${testname}" TEST_NAME)
    SET(UTESTBIN_NAME "${testname}_unittest")
    ADD_EXECUTABLE(${UTESTBIN_NAME} ${utestfilev})
    TARGET_LINK_LIBRARIES(${UTESTBIN_NAME} ${LIBRARY_NAME} ${UNITTEST_LIBS} ${TEST_EXT_LIBS} "${TEST_${TEST_NAME}_LIBS}")
    SET_TARGET_PROPERTIES(${UTESTBIN_NAME} PROPERTIES FOLDER "Test")
    ADD_TEST(NAME ${testname} WORKING_DIRECTORY ${PROJECT_BINARY_DIR} COMMAND ${UTESTBIN_NAME})
  ENDFOREACH()
ENDIF (BUILD_UNITTEST)
