SET(FOLDER_NAME synchronization)

IF (BUILD_STANDALONE)
  SET(LIBRARY_NAME "${FOLDER_NAME}")
ELSE (BUILD_STANDALONE)
  SET(LIBRARY_NAME "prot")
ENDIF (BUILD_STANDALONE)

IF (BUILD_STANDALONE)
  STRING(TOUPPER "${FOLDER_NAME}_SRCS" SOURCE_NAME)
  SET(${SOURCE_NAME}
  lock.hh
  lock.cc
  semaphore.hh
  semaphore.cc
  event.hh
  event.cc
  condvar.hh
  condvar.cc
  )
  ADD_LIBRARY(${LIBRARY_NAME} STATIC ${${SOURCE_NAME}})
  # TARGET_LINK_LIBRARIES(${LIBRARY_NAME} )
  SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES FOLDER "Prot")
ENDIF (BUILD_STANDALONE)

IF (BUILD_UNITTEST)
  SET(UNITTEST_NAME "${FOLDER_NAME}_unittest")
  IF (BUILD_STANDALONE)
    SET(TEST_EXT_LIBS
    system
    time
    )
  ENDIF (BUILD_STANDALONE)
  FILE(GLOB UNITTEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*_unittest.cpp")
  IF(UNITTEST_FILES)
    ADD_EXECUTABLE(${UNITTEST_NAME} ${UNITTEST_FILES})
    TARGET_LINK_LIBRARIES(${UNITTEST_NAME} ${LIBRARY_NAME} ${UNITTEST_LIBS} ${TEST_EXT_LIBS})
    SET_TARGET_PROPERTIES(${UNITTEST_NAME} PROPERTIES FOLDER "Test")
    ADD_TEST(NAME ${FOLDER_NAME} WORKING_DIRECTORY ${PROJECT_BINARY_DIR} COMMAND ${UNITTEST_NAME})
  ENDIF(UNITTEST_FILES)
ENDIF (BUILD_UNITTEST)
