SET(FOLDER_NAME time)

IF (BUILD_STANDALONE)
  SET(LIBRARY_NAME "${FOLDER_NAME}")
ELSE (BUILD_STANDALONE)
  SET(LIBRARY_NAME "prot")
ENDIF (BUILD_STANDALONE)

IF (BUILD_STANDALONE)
  STRING(TOUPPER "${FOLDER_NAME}_SRCS" SOURCE_NAME)
  SET(${SOURCE_NAME}
  timeunit.hh
  timeunit.cc
  tickcount.hh
  tickcount.cc
  timestamp.hh
  timestamp.cc
  timedelta.hh
  timedelta.cc
  )
  IF (NOT WIN32)
    SET(${SOURCE_NAME}_LIBS
      rt)
  ENDIF ()
  ADD_LIBRARY(${LIBRARY_NAME} STATIC ${${SOURCE_NAME}})
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${${SOURCE_NAME}_LIBS})
  SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES FOLDER "Prot")
ENDIF (BUILD_STANDALONE)

IF (BUILD_UNITTEST)
  SET(UNITTEST_NAME "${FOLDER_NAME}_unittest")
  FILE(GLOB UNITTEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*_unittest.cpp")
  IF(UNITTEST_FILES)
    ADD_EXECUTABLE(${UNITTEST_NAME} ${UNITTEST_FILES})
    TARGET_LINK_LIBRARIES(${UNITTEST_NAME} ${LIBRARY_NAME})
    SET_TARGET_PROPERTIES(${UNITTEST_NAME} PROPERTIES FOLDER "Test")
  ENDIF(UNITTEST_FILES)
ENDIF (BUILD_UNITTEST)
